fixed overflow, made narrow view better, indicate active page, center nav text

--- a/main.css
+++ b/main.css
@@ -57,28 +57,44 @@ a:hover {
     text-decoration: underline;
 }
 
-.header {
-    height: 70vh;
-    width: 100vw;
-    padding: 0;
-    margin: 0 0 -4px 0;
-    overflow: hidden;
-    position: relative;
+@media all and (max-width: 750px) {
+    .header > img {
+        object-fit: scale-down;
+        object-position: center center;
+        width: 100%;
+        height: 100%;
+    }
+    .header {
+        max-height: 70vh;
+        width: 100vw;
+        padding: 0;
+        margin: 0 0 -4px 0;
+        overflow: hidden;
+    }
 }
-
-.header > img {
-    object-fit: cover;
-    object-position: center center;
-    width: 100%;
-    height: 100%;
+@media all and (min-width: 750px) {
+    .header > img {
+        object-fit: cover;
+        object-position: center center;
+        width: 100%;
+        height: 100%;
+    }
+    .header {
+        height: 70vh;
+        width: 100vw;
+        padding: 0;
+        margin: 0 0 -4px 0;
+        overflow: hidden;
+    }
 }
-
 nav {
     display: flex;
+    text-align: center;
     justify-content: center;
+    align-items: center; /* Align vertical */
     background-color: #5C1932;
     position: sticky;
-    /* position: -webkit-sticky; */
+    position: -webkit-sticky;
     top: 0;
 }
 
@@ -88,7 +104,7 @@ nav > a {
     color: #efe5e5;
 }
 
-nav > a:hover {
+nav > a:hover, nav > a.active {
     background-color: #270a15;
     text-decoration: none;
 }
@@ -99,7 +115,6 @@ footer {
     padding: 5px;
     display: flex;
     justify-content: center;
-    width: 100vw;
     height: 4.3rem;
     bottom: 0;
 }
